[package]
name = "maschine"
version = "0.1.0"
authors = ["Tim Savage <tim@savage.company>"]
repository = "https://github.com/timsavage/maschine-rs"
description = "For interacting with a Native Instruments Maschine interface over USB"
license = "MIT"
keywords = ["hid", "usb", "maschine", "re-use"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hidapi = "2.0.2"
raqote = "0.8.1"

[dev-dependencies]
font-kit = "^0.10.0"

