[package]
name = "maschine-tools"
version = "0.1.0"
authors = ["Tim Savage <tim@savage.company>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byteorder = "1.4.3"
clap = { version = "4.0.32", features = ["derive"] }

[[bin]]
name = "font-gen"
test = false
bench = false
path = "src/font-gen.rs"
